user-accounts: Don't have domains twice in the drop down

If we discover domains again, don't add them twice to the drop
down and confuse the user. This is especially important if we
receive two realms from realmd for the same domain for use with
different clients (ie: sssd/winbind). We only want to offer the
first choice

https://bugzilla.gnome.org/show_bug.cgi?id=686397